Branch issue 110 (#120)
* Account settings page: spread out sections

* Labels page: drop-down menu off screen

* Center all modals

* fix date inputs appearance

* Event modal: phone number input keyboard input

--- a/src/Gui/tasks/static/css/custom/style.scss
+++ b/src/Gui/tasks/static/css/custom/style.scss
@@ -158,3 +158,14 @@ textarea {
         .section-display {display: none;}
     }
 }
+
+
+.account-settings-page-section {
+    margin: 80px 0px;
+}
+
+
+.custom-datepicker,
+.custom-timepicker {
+    -webkit-appearance: none;
+}
